--- a/startExoplanet.htm
+++ b/startExoplanet.htm
@@ -166,54 +166,7 @@
 
     </table>
 </div>
-<div style=visibility:hidden;overflow:hidden;width:1px;height:1px>
-<svg>
-<defs id=habDefs>
-<radialGradient id="mesoplanet" gradientUnits="objectBoundingBox"
-fx="30%" fy="30%">
-<stop offset="0%"   style="stop-color:#FFFFFF"/>
-<stop offset="40%"  style="stop-color:#0000AA"/>
-<stop offset="100%" style="stop-color:#000077"/>
-</radialGradient>
-<radialGradient id="psychroplanet" gradientUnits="objectBoundingBox"
-fx="30%" fy="30%">
-<stop offset="0%"   style="stop-color:#FFFFFF"/>
-<stop offset="40%"  style="stop-color:#37A1E7"/>
-<stop offset="100%" style="stop-color:#378BC7"/>
-</radialGradient>
-<radialGradient id="non-habitable" gradientUnits="objectBoundingBox"
-fx="30%" fy="30%">
-<stop offset="0%"   style="stop-color:#FFFFFF"/>
-<stop offset="40%"  style="stop-color:#242729"/>
-<stop offset="100%" style="stop-color:#24282A"/>
-</radialGradient>
-<radialGradient id="hypopsychroplanet" gradientUnits="objectBoundingBox"
-fx="30%" fy="30%">
-<stop offset="0%"   style="stop-color:#FFFFFF"/>
-<stop offset="40%"  style="stop-color:#AC49E3"/>
-<stop offset="100%" style="stop-color:#9D42D0"/>
-</radialGradient>
-<radialGradient id="unknown" gradientUnits="objectBoundingBox"
-fx="30%" fy="30%">
-<stop offset="0%"   style="stop-color:#FFFFFF"/>
-<stop offset="40%"  style="stop-color:#959595"/>
-<stop offset="100%" style="stop-color:#7C7C7C"/>
-</radialGradient>
-<radialGradient id="thermoplanet" gradientUnits="objectBoundingBox"
-fx="30%" fy="30%">
-<stop offset="0%"   style="stop-color:#FFFFFF"/>
-<stop offset="40%"  style="stop-color:#CA0A14"/>
-<stop offset="100%" style="stop-color:#A2030C"/>
-</radialGradient>
-<radialGradient id="hypothermoplanet" gradientUnits="objectBoundingBox"
-fx="30%" fy="30%">
-<stop offset="0%"   style="stop-color:#FFFFFF"/>
-<stop offset="40%"  style="stop-color:#F08F27"/>
-<stop offset="100%" style="stop-color:#DB8226"/>
-</radialGradient>
-</defs></svg>
 
-</div>
 
 <div id=helpDiv title="Click to close" onclick=this.style.visibility="hidden" style='cursor:default;visibility:hidden;border-radius:10px;padding:10px;border:1px solid black;background:white;position:absolute;top:20px;left:20px;width:80%'>
 <center><table>
@@ -242,41 +195,41 @@ The star, exoplanets, their orbits, and habitable zone shown as scaled within th
 
 
 
- <table border=1 style=border-collapse:collapse>
+  <table border=1 style=border-collapse:collapse>
  <tr><td colspan=2><b>Habitable Class</b></td></tr>
  <tr>
 <td>Non-Habitable </td>
-<td style=width:30px;height:30px;><svg width=30 height=30  overflow="visible"><circle transform="translate(15 15)" stroke="none" r="15" class="hab-non-habitable" ></svg></td>
+<td style=width:30px;height:30px;><img width=30 height=30  src=Exoplanet/non-habitable.svg /></td>
  </tr>
  <tr>
 <td>Mesoplanet </td>
-<td style=width:30px;height:30px;><svg width=30 height=30  overflow="visible"><circle transform="translate(15 15)" stroke="none" r="15" class="hab-mesoplanet" ></svg></td>
+<td style=width:30px;height:30px;><img width=30 height=30  src=Exoplanet/Mesoplanet.svg /></td>
  </tr>
 
  <tr>
 <td>Psychroplanet </td>
-<td style=width:30px;height:30px;><svg width=30 height=30  overflow="visible"><circle transform="translate(15 15)" stroke="none" r="15" class="hab-psychroplanet" ></svg></td>
+<td style=width:30px;height:30px;><img width=30 height=30  src=Exoplanet/Psychroplanet.svg /></td>
  </tr>
 
 
  <tr>
 <td>Hypopsychroplanet </td>
-<td style=width:30px;height:30px;><svg width=30 height=30  overflow="visible"><circle transform="translate(15 15)" stroke="none" r="15" class="hab-hypopsychroplanet" ></svg></td>
+<td style=width:30px;height:30px;><img width=30 height=30  src=Exoplanet/Hypopsychroplanet.svg /></td>
  </tr>
 
  <tr>
 <td>Thermoplanet </td>
-<td style=width:30px;height:30px;><svg width=30 height=30  overflow="visible"><circle transform="translate(15 15)" stroke="none" r="15" class="hab-thermoplanet" ></svg></td>
+<td style=width:30px;height:30px;><img width=30 height=30  src=Exoplanet/Thermoplanet.svg /></td>
  </tr>
 
  <tr>
 <td>Hypothermoplanet </td>
-<td style=width:30px;height:30px;><svg width=30 height=30  overflow="visible"><circle transform="translate(15 15)" stroke="none" r="15" class="hab-hypothermoplanet" ></svg></td>
+<td style=width:30px;height:30px;><img width=30 height=30  src=Exoplanet/Hypothermoplanet.svg /></td>
  </tr>
 
  <tr>
 <td>Unknown </td>
-<td style=width:30px;height:30px;><svg width=30 height=30  overflow="visible"><circle transform="translate(15 15)" stroke="none" r="15" class="hab-unknown" ></svg></td>
+<td style=width:30px;height:30px;><img width=30 height=30  src=Exoplanet/unknown.svg /></td>
  </tr>
  </table>
  </TD>
